# SteedPilot

./: .gitignore  README.md
docs/: protocol.md
firmware/: platformio.ini
firmware/src/: FirmwareBle.cpp  FirmwareBle.h  FirmwareDisplay.cpp  FirmwareDisplay.h  FirmwareMotion.cpp  FirmwareMotion.h  FirmwareTouch.cpp  FirmwareTouch.h  I2C_Driver.cpp  main.cpp
firmware/src/shared/: App.cpp  NavJson.cpp  Units.cpp
fixtures/: destination-heading.json  destination-off-route.json  disconnected.json  navigation-ahead.json  navigation-arrive.json  navigation-bend-left.json  navigation-exit-left.json  navigation-left.json  navigation-roundabout.json  navigation-speed-warning.json  navigation-u-turn.json  pairing.json  route-demo.json  update-distance.json
include/SteedPilot/: App.h  Color.h  Display.h  FontAtlas.h  ImageAssets.h  NavJson.h  NavState.h  Units.h
ios/SteedPilot/SteedPilot/: BluetoothNavSender.swift  ContentView.swift  Info.plist  NavFixture.swift  NavigationDecisionCore.swift  NavigationRouteCore.swift  SteedPilotApp.swift
ios/SteedPilot/SteedPilot.xcodeproj/: project.pbxproj
ios/SteedPilot/SteedPilot/Fixtures/: disconnected.json  pairing.json  (+5 more)
sim/: CMakeLists.txt  SdlDisplay.cpp  SdlDisplay.h  main.cpp
src/: App.cpp  NavJson.cpp  Units.cpp
tools/: SteedPilotSender.entitlements  SteedPilotSenderInfo.plist  generate_font_atlas.py  generate_image_assets.py  steedpilot_navigation_tests.swift  steedpilot_pull_ios_file  steedpilot_pull_ios_log  steedpilot_route_plan_tests.swift  steedpilot_send  steedpilot_send.swift  test_navigation  test_route_plans
(+1 files in other folders)
